<resources>
    <string name="app_name">MeetUpApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="fullName">Full Names</string>
    <string name="email">Email</string>
    <string name="pin">Password</string>
    <string name="terms"><![CDATA[I agree to terms & conditions]]></string>
    <string name="repeatPin">Repeat Password</string>
    <string name="passwordstandard">Password be atleast six characters long</string>
    <string name="hello">Hello</string>
    <string name="signin">Sign in</string>
    <string name="forgot">Forgot your password?</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="wrong_password">Wrong password, try again</string>
    <string name="signup">Sign up</string>
    <string name="advise">Please enter your \ndetails to sign in</string>
    <string name="signinafter_registration">You have successfully registered \nyour account. You can now sign in</string>
    <string name="congratulation">Congratulations</string>
    <string name="connectText">Connect with your business partners and \nassociates using the new platform</string>
    <string name="skipText">Skip</string>
    <string name="copyright">copyright \u00a9 meetup</string>
    <string name="title_activity_season_home">SeasonHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="notification">notification</string>
    <string name="bell">bell</string>
    <string name="search">search</string>
    <string name="title">Meetup</string>
    <string name="products">products</string>
    <string name="splash_message">get to meet great \npeople around you</string>
    <string name="already_have">Already have an account?</string>
</resources>
